# wechat-bot-core

./: .gitignore  Cargo.toml  build.rs  build.sh
api/protos/: proxy.proto
src/: basic_market_info.rs  config.rs  error.rs  gamble.rs  gpt.rs  handler.rs  help.rs  huangli.rs  lib.rs  proxy.rs  server.rs
